# navila_ros2_pkg

./: .gitignore  .gitmodule  .gitmodules  README.md  bridge_config.yaml  convert.py  fakeme.md  install_navila.sh  navila_aliases.sh  package.xml  setup.py  test_navila_offline.py
config/: lab_navila_config.yaml  sim_navila_config.yaml
launch/: navilalab.launch.py  navilasim.launch.py
more/: navila_aliases.sh  prompt_examples.txt  test_vla_offline.py
navila_ros2_bridge/: action_node.py  navila_bench.py  navila_node.py  navila_super_node.py
ros2/ros2_husky_ws/install/: setup.sh
ros2/ros2_husky_ws/install/clearpath_common/share/clearpath_common/: local_setup.bash  local_setup.dsv  (+5 more)
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/cmake/: husky_bringupConfig-version.cmake  husky_bringupConfig.cmake
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/config/sensors/: gps_0.yaml  imu_0.yaml  lidar3d_0.yaml
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/environment/: ament_prefix_path.dsv  path.dsv
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/launch/: bringup.launch.py
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/launch/platform/: platform-service.launch.py
ros2/ros2_husky_ws/install/husky_bringup/share/husky_bringup/launch/sensors/: gps_0.launch.py  imu_0.launch.py  lidar3d_0.launch.py  sensors-service.launch.py
ros2/ros2_husky_ws/install/husky_description/share/husky_description/: local_setup.bash  local_setup.dsv  local_setup.sh  local_setup.zsh  package.ps1  package.sh  package.xml
ros2/ros2_husky_ws/install/husky_description/share/husky_description/cmake/: husky_descriptionConfig-version.cmake  husky_descriptionConfig.cmake
ros2/ros2_husky_ws/install/husky_description/share/husky_description/environment/: ament_prefix_path.dsv  path.dsv
ros2/ros2_husky_ws/install/husky_description/share/husky_description/urdf/: robot.urdf.xacro
ros2/ros2_husky_ws/log/: latest_build
ros2/ros2_navila_ws/log/: latest_build
ros2/ros2_navila_ws/src/navila_ros2_bridge/: setup.py
ros2/ros2_navila_ws/src/navila_ros2_bridge/config/: navila_config.yaml
ros2/ros2_navila_ws/src/navila_ros2_bridge/launch/: navila.launch.py
ros2/ros2_navila_ws/src/navila_ros2_bridge/navila_ros2_bridge/: action_to_cmdvel_node.py  navila_node.py  navila_super_node.py
ros2_navila_ws/src/navila_ros2_bridge/: setup.cfg  setup.py
ros2_navila_ws/src/navila_ros2_bridge/launch/: navila.launch.py
ros2_navila_ws/src/navila_ros2_bridge/navila_ros2_bridge/: action_to_cmdvel_node.py  instruction_node.py  navila_node.py
src/camera_utils_ros/: package.xml  setup.cfg  setup.py
src/camera_utils_ros/camera_utils_ros/: camera_publisher.py
src/camera_utils_ros/launch/: camera_publisher.launch.py
src/navila_ros2_bridge/: setup.py
src/navila_ros2_bridge/config/: domain_bridge.yaml  lab_navila_config.yaml  navila_config.yaml  sim_navila_config.yaml
src/navila_ros2_bridge/launch/: bringup.launch.py  navila.launch.py
src/navila_ros2_bridge/navila_ros2_bridge/: action_node.py  action_to_cmdvel_node.py  instruction_node.py  navila_only_load.py  navila_super_node.py  safety_layer_node.py
(+297 files in other folders)
