<?xml version="1.0"?>
<package format="3">
<name>husky_bringup</name>
<version>1.0.0</version>
<description>The husky_bringup contains the ROS 2 packages for launching husky sensors and description </description>

<maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>

<license>BSD</license>

<exec_depend>wireless_watcher</exec_depend>
<exec_depend>clearpath_common</exec_depend>
<exec_depend>clearpath_diagnostics</exec_depend>

<buildtool_depend>ament_cmake</buildtool_depend>

<export>                               
    <build_type>ament_cmake</build_type> 
</export> 

</package>