<?xml version="1.0"?>
<package format="3">
<name>husky_description</name>
<version>1.0.0</version>
<description>The husky_description contains the husky robot description </description>

<maintainer email="federico.rollo@leonardo.com">Federico Rollo</maintainer>

<license>BSD</license>

<depend>clearpath_platform_description</depend>
<depend>clearpath_sensors_description</depend>

<buildtool_depend>ament_cmake</buildtool_depend>

<export>                               
    <build_type>ament_cmake</build_type> 
</export> 

</package>